...
    android:overScrollMode="always">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activityContainer"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
                <ImageButton
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/grid_icon"
                    android:layout_weight="1"
                    android:layout_width="30dp"
                    android:background="@android:color/transparent"
                    android:id="@+id/viewStyleBtn" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
...

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:id="@+id/gridLayout">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:id="@+id/firstRowLayout"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/mainStudentInfoBtnText"
                    android:layout_width="90dp"
                    android:id="@+id/mainStudentInfoBtn"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:background="@color/StudentInfoColor"
                    android:layout_marginRight="2.5dp"
                    android:textAllCaps="false"
                    android:textColor="@color/TextWhite"
                    android:elevation="4dp"
                    android:layout_height="95dp" />

                <Button
                    android:text="@string/mainLatestNewsBtnText"
                    android:layout_width="90dp"
                    android:id="@+id/mainLatestNewsBtn"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:background="@color/LatestNewsColor"
                    android:layout_marginLeft="2.5dp"
                    android:textAllCaps="false"
                    android:elevation="4dp"
...
                    android:layout_height="95dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:id="@+id/secondRowLayout"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/mainCampusNavBtnText"
                    android:id="@+id/mainCampusNavBtn"
                    android:layout_weight="1"
                    android:layout_width="90dp"
                    android:background="@color/CampusNavigationColor"
                    android:textSize="12sp"
                    android:layout_marginRight="2.5dp"
                    android:textAllCaps="false"
...
