<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.andrewwilloughby.campus_assistant.MapsActivity" />

    <LinearLayout
        android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"

    android:orientation="horizontal"
        android:background="@color/TextWhite">

    <EditText
        android:id="@+id/searchBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:hint="@string/mapSearchHintText"
        android:textColorLink="@color/CampusNavigationColor" />


    <Button
        android:id="@+id/searchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:onClick="onMapSearch"
        android:text="@string/mapSearchBtnText"
        android:background="@color/CampusNavigationColor"
        android:textAllCaps="false"
        android:textColor="@color/TextWhite" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/CampusNavigationColor"
        android:id="@+id/navDetails"
        android:visibility="gone"
        android:layout_height="40dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            map:srcCompat="@drawable/walking_icon"
            android:id="@+id/imageView2"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:text="@string/distanceTxtViewText"
            android:layout_height="match_parent"
            android:id="@+id/distanceTxtView"
            android:layout_weight="1"
            android:layout_width="150dp"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:textColor="@color/TextWhite"
            android:textSize="16sp" />

        <TextView
            android:text="@string/timeTxtViewText"
            android:layout_height="match_parent"
            android:id="@+id/durationTxtView"
            android:layout_weight="1"
            android:layout_width="150dp"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:textColor="@color/TextWhite"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/cancelRouteBtn"
            android:layout_weight="1"
            android:background="@drawable/cancel_icon_white"
            android:elevation="0dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:contentDescription="Cancel current route."
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/searchNearbyItems">

            <TextView
                android:text="@string/search_nearby_textView_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/searchNearbyTextView"
                android:textSize="18sp"
                android:layout_marginLeft="8dp" />

            <Spinner
                android:layout_height="40dp"
                android:id="@+id/searchNearbySpinner"
                android:layout_width="wrap_content"
                android:prompt="@string/search_nearby_prompt"
                android:entries="@array/search_nearby_items"
                android:background="@color/CampusNavigationColor"
                android:layout_marginLeft="8dp"
                android:spinnerMode="dialog" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>