<resources>
    <string name="app_name">UoR Campus Assistant</string>
    <!-- Main Menu Activity Strings -->
    <string name="mainStudentInfoBtnText">Student Information</string>
    <string name="mainLatestNewsBtnText">Latest News</string>
    <string name="mainCampusNavBtnText">Campus Navigation</string>
    <string name="mainTravelInfoBtnText">Travel Information</string>
    <string name="mainBbEmailBtnText">Blackboard &amp; Email</string>
    <string name="mainTimetableBtnText">Timetable</string>
    <!-- Student Information Menu Activity Strings -->
    <string name="studentInfoMenuTitle">Student Information</string>
    <string name="studentInfoServicesBtnText">Student Services</string>
    <string name="studentInfoLibraryBtnText">Library</string>
    <string name="studentInfoPaymentsBtnText">Payments</string>
    <string name="studentInfoRisisBtnText">RISIS</string>
    <string name="studentInfoStaffDirectoryBtnText">Staff Search</string>
    <!-- Campus Navigation Menu Activity Strings -->
    <string name="campusNavMenuTitle">Campus Navigation</string>
    <string name="campusNavInteractiveMapBtnText">Interactive Map</string>
    <string name="campusNavMapsBtnText">Campus Maps</string>
    <!-- Campus Maps Menu Activity Strings -->
    <string name="campusMapsWhiteknightsBtnText">Whiteknights Campus</string>
    <string name="campusMapsLoroBtnText">London Road Campus</string>
    <string name="campusMapsHallsBtnText">Student Halls</string>
    <!-- Travel Information Menu Activity Strings -->
...
    <string name="travelInfoBusTimetableBtnText">Bus Timetable</string>
    <!-- Blackboard & Email Menu Activity Strings -->
    <string name="bbEmailMenuTitle">Blackboard &amp; Email</string>
    <string name="bbemailBlackboardBtnText">Blackboard</string>
    <string name="bbemailEmailBtnText">Email</string>
    <!-- Latest News Activity Strings -->
    <string name="uorTweetsBtnText">UoR Tweets</string>
    <string name="rusuTweetsBtnText">RUSU Tweets</string>
    <string name="refreshHeaderText">Pull to refresh</string>
    <!-- Safety Info Activity Strings -->
    <string name="safetyMessage1">In an emergency, always dial 999.</string>
    <string name="safetyMessage2">When safe to do so, contact University of Reading Security.</string>
    <string name="securityEmergencyBtnText">Report an emergency</string>
    <string name="securityNonEmergencyBtnText">Report non-emergency</string>
...
    <string name="railStationBusUrl">http://transportapi.com/v3/uk/bus/stop/039028150004/live.json?app_id=03bf8009&amp;app_key=d9307fd91b0247c607e098d5effedc97&amp;group=no&amp;limit=15&amp;nextbuses=yes</string>
    <string name="routeTxtViewText">Route</string>
    <string name="destinationTxtViewText">Journey Destination</string>
    <string name="arrivalTxtViewText">Time</string>

    <string name="todayBtnText">Today</string>
    <string name="mapSearchHintText">Search here</string>
    <string name="mapSearchBtnText">Search</string>
    <string name="distanceTxtViewText">[distance]</string>
    <string name="timeTxtViewText">[time]</string>
    <string name="englandMapBounds">55.811741, 1.76896, 49.871159, -6.37988</string>
    <string name="uniUsernameTextView">University Username:</string>
    <string name="uniPasswordTextView">University Password:</string>
...
    </string-array>

    <string-array name="timetableItems">
        <item>Student Timetable</item>
    </string-array>

    <string name="search_nearby_textView_text">Show nearby:</string>
    <string name="search_nearby_prompt">Show nearby</string>
    <string name="cancel_current_route">Cancel current route.</string>
    <string-array name="search_nearby_items">
        <item>None Selected</item>
        <item>Cafe</item>
        <item>Parking</item>
...
