...
            android:layout_height="wrap_content">

                <Button
                    android:text="@string/uorTweetsBtnText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/uniTweetsBtn"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/TextWhite"
                    android:textAllCaps="false" />

                <View
...
                    android:background="@color/colorPrimaryDark" />

                <Button
                    android:text="@string/rusuTweetsBtnText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rusuTweetsBtn"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/TextWhite"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:textAllCaps="false" />
        </LinearLayout>
...
