...
                    android:textAllCaps="false"
                    android:layout_height="95dp" />

                <Button
                    android:text="@string/studentInfoLibraryBtnText"
                    android:layout_width="90dp"
                    android:id="@+id/studentInfoLibraryBtn"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:background="@color/StudentInfoColor"
                    android:layout_marginLeft="2.5dp"
                    android:textColor="@color/TextWhite"
                    android:textAllCaps="false"
...
